--- a/PLL/PLL.csproj
+++ b/PLL/PLL.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="addfood.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="addfood.Designer.cs">
+      <DependentUpon>addfood.cs</DependentUpon>
+    </Compile>
     <Compile Include="addRoom.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +69,18 @@
     </Compile>
     <Compile Include="checkout.Designer.cs">
       <DependentUpon>checkout.cs</DependentUpon>
+    </Compile>
+    <Compile Include="deletefood.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="deletefood.Designer.cs">
+      <DependentUpon>deletefood.cs</DependentUpon>
+    </Compile>
+    <Compile Include="greet.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="greet.Designer.cs">
+      <DependentUpon>greet.cs</DependentUpon>
     </Compile>
     <Compile Include="loader.cs">
       <SubType>Form</SubType>
@@ -88,6 +106,12 @@
     <Compile Include="orderfood.Designer.cs">
       <DependentUpon>orderfood.cs</DependentUpon>
     </Compile>
+    <Compile Include="payment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="payment.Designer.cs">
+      <DependentUpon>payment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs">
@@ -96,12 +120,21 @@
     <Compile Include="Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
+    <Compile Include="updatefood.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="updatefood.Designer.cs">
+      <DependentUpon>updatefood.cs</DependentUpon>
+    </Compile>
     <Compile Include="viewrooms.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="viewrooms.Designer.cs">
       <DependentUpon>viewrooms.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="addfood.resx">
+      <DependentUpon>addfood.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="addRoom.resx">
       <DependentUpon>addRoom.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,6 +143,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="checkout.resx">
       <DependentUpon>checkout.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="deletefood.resx">
+      <DependentUpon>deletefood.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="greet.resx">
+      <DependentUpon>greet.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="loader.resx">
       <DependentUpon>loader.cs</DependentUpon>
@@ -123,6 +162,9 @@
     <EmbeddedResource Include="orderfood.resx">
       <DependentUpon>orderfood.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="payment.resx">
+      <DependentUpon>payment.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -134,6 +176,9 @@
     </Compile>
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="updatefood.resx">
+      <DependentUpon>updatefood.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="viewrooms.resx">
       <DependentUpon>viewrooms.cs</DependentUpon>
