--- a/PLL/PLL.csproj
+++ b/PLL/PLL.csproj
@@ -76,11 +76,23 @@
     <Compile Include="deletefood.Designer.cs">
       <DependentUpon>deletefood.cs</DependentUpon>
     </Compile>
+    <Compile Include="forgetpassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forgetpassword.Designer.cs">
+      <DependentUpon>forgetpassword.cs</DependentUpon>
+    </Compile>
     <Compile Include="greet.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="greet.Designer.cs">
       <DependentUpon>greet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ipconnectivity.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ipconnectivity.Designer.cs">
+      <DependentUpon>ipconnectivity.cs</DependentUpon>
     </Compile>
     <Compile Include="loader.cs">
       <SubType>Form</SubType>
@@ -88,11 +100,11 @@
     <Compile Include="loader.Designer.cs">
       <DependentUpon>loader.cs</DependentUpon>
     </Compile>
-    <Compile Include="Login.cs">
+    <Compile Include="UserForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.Designer.cs">
-      <DependentUpon>Login.cs</DependentUpon>
+    <Compile Include="UserForm.Designer.cs">
+      <DependentUpon>UserForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Modules.cs">
       <SubType>Form</SubType>
@@ -147,14 +159,20 @@
     <EmbeddedResource Include="deletefood.resx">
       <DependentUpon>deletefood.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="forgetpassword.resx">
+      <DependentUpon>forgetpassword.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="greet.resx">
       <DependentUpon>greet.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ipconnectivity.resx">
+      <DependentUpon>ipconnectivity.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="loader.resx">
       <DependentUpon>loader.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Login.resx">
-      <DependentUpon>Login.cs</DependentUpon>
+    <EmbeddedResource Include="UserForm.resx">
+      <DependentUpon>UserForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Modules.resx">
       <DependentUpon>Modules.cs</DependentUpon>
